syntax = "proto3";
package iridium;

option cc_enable_arenas = true;

import "pkt2.proto";

/*
// IE_IO 0x01, 28
typedef ALIGN struct {
        uint32_t cdrref;        //< Iridium message identifier                                  4
        IMEI imei;              //< see IMEI                                                    15
        uint8_t status;         //< see IOStatus                                                1
        uint16_t sentno;        //< momsn modem sent out packet number                          2
        uint16_t recvno;        //< mtmsn modem received out packet number. Not used            2
        uint32_t recvtime;      //< stime Unix epoch time, seconds since 1970                   4
} PACKED IEIOHeader;
*/

message IE_IOHeader
{
    // input packet description
    option(pkt2.packet) = { 
        name: "ioheader"
        short_name: "Iridium IO header"
        full_name: "Iridium message IO header"
        set: "packet_type = 8; gps_flags = SET_BIT(gpsolddata, 0) | SET_BIT(gpsencoded, 1) | SET_BIT(gpsfrommemory, 2) | SET_BIT(gpsnoformat, 3) | SET_BIT(gpsnosats, 4) | SET_BIT(gpsbadhdop, 5) | SET_BIT(gpstime, 6) | SET_BIT(gpsnavdata, 7); sats = satellite_visible_count; battery = ((battery_voltage * 10) & 0x3f) | SET_BIT(battery_low, 6) | SET_BIT(battery_high, 7); packet_key = 0; r2 = 0; temperature = temperature_c; SET(gps_coords, coordinates); SET(time5, measure_time);" 
        fields: [
        {
            name: "ie_id"
            type: INPUT_UINT
            size: 1
            offset: 0
            tag: 1			      ///< tag 8- animal. check this.
        },
        {
            name: "ie_size"
            type: INPUT_UINT
            size: 2
            offset: 1
            tag: 28               ///< tag, 28 bytes long
        },
        {
            name: "cdrref"        ///< Iridium message identifier                                  4
            type: INPUT_UINT
            size: 4
            offset: 3
        },
        {
            name: "imei"
            type: INPUT_BYTES
            size: 15
            offset: 7
        },
        {
            name: "status"
            type: INPUT_BYTES
            size: 1
            offset: 22
        },
        {
            name: "momsn"         ///< sentno
            type: INPUT_UINT
            size: 2
            offset: 23
        },
        {
            name: "mtmsn"         ///< recvno
            type: INPUT_INT
            size: 2
            offset: 25
        },
        {
            name: "recvtime"
            type: INPUT_UINT
            size: 4
            offset: 27
        }
        ]
    };

	uint32 cdrref = 1 [(pkt2.variable) = {
		name: "cdrref"
        field: "cdrref"
        get: "cdrref"
    }];

	string imei = 2 [(pkt2.variable) = {
	    name: "imei"
        field: "imei"
        get: "imei"
        index: 2
    }];

	int32 status = 3 [(pkt2.variable) = {
        name: "status"
        short_name: "Статус"
        get: "status"
    }];
	
	int32 recvno = 4 [(pkt2.variable) = {
        name: "recvno"
        get: "momsn"
    }];

	int32 sentno = 5 [(pkt2.variable) = {
        name: "sentno"
        get: "mtmsn"
    }];

	uint32 recvtime = 6 [(pkt2.variable) = {
        name: "recvtime"
        get: "recvtime"
    }];
}
